[tool.poetry]
name = "dothttp-req"
version = "0.0.44a2"
description = "Dothttp is Simple http client for testing and development"
authors = ["Prasanth <kesavarapu.siva@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
exclude = ["test", "test.core", "test.extensions", "benchmarks"]
packages = [{'include'='dotextensions'}, {'include'='dothttp'}, {'include'='dothttp_req'}, {'include'='dothttp_test'}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/cedric05/dothttp"

[tool.poetry.scripts]
dothttp = 'dothttp.__main__:main'



[tool.poetry.dependencies]
python = ">=3.8,<3.14"
jsonschema = "4.23.0"
jstyleson = "0.0.2"
textx = "4.1.0"
requests-pkcs12 = "1.25"
parsys-requests-unixsocket = "0.3.2"
requests-aws4auth = "1.3.1"
requests-ntlm = "1.3.0"
restrictedpython = "7.4"
faker = "33.1.0"
requests-hawk = "1.2.1"
msal = "1.31.1"
pyyaml = "6.0.2"
toml = "0.10.2"
requests = "2.32.3"
xmltodict = "^0.14.2"

[tool.poetry.group.dev.dependencies]
waitress = "3.0.0"
flask = "3.0.2"
python-magic = "^0.4.27"
js2py = "0.74"
flask-cors = "^5.0.0"
pytest = "^8.3.4"
pytest-html = "^4.1.1"

[tool.poetry.extras]
js = ["js2py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
