[tool.poetry]
name = "dothttp-req"
version = "0.0.44a33"
description = "Dothttp is Simple http client for testing and development"
authors = ["Prasanth <kesavarapu.siva@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
exclude = ["test", "test.core", "test.extensions", "benchmarks"]
packages = [{'include'='dotextensions'}, {'include'='dothttp'}, {'include'='dothttp_req'}, {'include'='dothttp_test'}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/cedric05/dothttp"

[tool.poetry.scripts]
dothttp = 'dothttp.__main__:main'



[tool.poetry.dependencies]
python = ">=3.10,<3.15"
jsonschema = "4.26.0"
jstyleson = "0.0.2"
textx = "4.2.3"
requests-pkcs12 = "1.27"
parsys-requests-unixsocket = "0.3.2"
requests-aws4auth = "1.3.2"
requests-ntlm = "1.3.0"
restrictedpython = "8.1"
faker = "40.21.0"
requests-hawk = "1.2.1"
msal = "1.34.0"
pyyaml = "6.0.3"
toml = "0.10.2"
requests = "2.33.0"
cryptography = "48.0.0"
urllib3 = "2.7.0"
idna = "3.15"
xmltodict = "^1.0.2"

[tool.poetry.group.dev.dependencies]
waitress = "3.0.2"
flask = "3.1.3"
python-magic = "^0.4.27"
flask-cors = "^6.0.1"
pytest = "9.0.3"
pytest-html = "^4.1.1"
pytest-xdist = "^3.6.1"
gunicorn = "^23.0.0"
httpbin = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
